...
                                context: context,
                                color: Colors.red,
                              );
                            } else {
                              // Navigator.pushNamed(context, AppRoute.loginRoute);
                              showSnackBar(
                                message: 'Registered successfully',
                                context: context,
                              );
                            }
                          }
                        },
                        style: ElevatedButton.styleFrom(
...
                            ),
                          ),
                        ),
                        child: Padding(
                          padding: const EdgeInsets.all(12.0),
                          child: Text(
                            'Register',
                            style: TextStyle(
                              fontFamily: "Impact",
                              color: Colors.black,
                              fontSize: isTablet ? 20 : 20,
                            ),
                          ),
...
