...
        showSnackBar(
            message: failure.error, context: context, color: Colors.red);
      },
      (success) {
        state = state.copyWith(isLoading: false, error: null);
        showSnackBar(
            message: 'Login Success', context: context, color: Colors.green);
        Navigator.popAndPushNamed(context, AppRoute.dashBoardRoute);
      },
    );
  }
}

