...
  static const String fixture = "/fixture";
  static const String player = "/player";

  static getApplicationRoute() {
    return {
      // splashRoute: (context) => const SplashView(),
      loginRoute: (context) => const Login(),
      dashBoardRoute: (context) => const Dashboard(),
      signUpRoute: (context) => const SignUp(),
      splashScreen: (context) => const SplashView(),
      profile: (context) => const ProfileScreen(),
      contact: (context) => const ContactPage(),

...
