...
                width: double.infinity,
                height: double.infinity,
              ),
              if (gameState.games.isEmpty)
                Center(
                  child: Text(
                    'No games for today',
                    style: TextStyle(
                      fontSize: fontSize * 2,
                      color: Colors.white,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
